# search-benchmark-game

./: Makefile
engines/calmcore-0.1.0/: Cargo.toml  Makefile
engines/lucene-10.0.0/: build.gradle
engines/lucene-10.0.0-bp/: build.gradle
