[package]
name = "calmcore-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
calmcore = { path = "../../../calmcore/calmcore" }
proto = { path = "../../../calmcore/proto/rust_pb" }
env_logger = "0.11.3"
futures = "*"
lazy_static = "1.4.0"
memcomparable = "0.2.0"
rayon = "1.10"
reqwest = { version = "0.12.4", features = ["blocking"] }
rust-stemmers = "1.2.0"
tonic = "0.12.3"

[profile.release]
lto = true
opt-level = 3
overflow-checks = false
# debug-assertions = false
