[package]
name = "calmcore-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
calmcore = { path = "../../../calmcore/calmcore" }
proto = { path = "../../../calmcore/proto/rust_pb" }
env_logger = "0.11.3"

[profile.release]
lto = true
opt-level = 3
overflow-checks = false
# debug-assertions = false
